--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* Reset and base styles */
 * {
-  margin: 1px;
-  padding: 1px;
+  margin: 0.1vw;
+  padding: 0.1vw;
   box-sizing: border-box;
 }
 
@@ -24,14 +24,13 @@ header {
 }
 
 header h1 {
-  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 2.5vw, 2.5rem);
   line-height: 4;
   margin-bottom: 1.5px;
   font-weight: bold;
 }
 
 header p {
-  font-size: 1rem;
   padding-bottom: 20px;
   opacity: 0.8;
 }
@@ -60,19 +59,23 @@ section {
   border: 3px solid #667eea;
 }
 
-section h1 {
-  background-color: #666eea;
-  line-height: 2;
-  border-radius: 5px;
-  text-align: center;
-  font-size: 1.5rem;
+section h3 {
+  color: black;
   margin-bottom: 10px;
-  font-weight: bold;
 }
 
 section p {
   margin-bottom: 10px;
-  font-size: 1;
+}
+
+p {
+  font-size: clamp(0.75rem, 2.5vw, 1rem);
+}
+
+#article-image {
+  display: block;
+  margin: auto;
+  width: 50%;
 }
 
 /* Output areas */
@@ -86,14 +89,14 @@ section p {
 
 .output h2 {
   color: #495056;
-  font-size: 20px;
+  font-size: clamp(1.5rem, 2.5vw, 2.0rem);
   margin-bottom: 1.75rem;
   font-weight: bold;
 }
 
 /* List styles */
 ul {
-  list-style: none;
+  list-style: circle;
   padding: 1;
 }
 
