--- a/main.css
+++ b/main.css
@@ -96,18 +96,19 @@ p {
 
 /* List styles */
 ul {
-  list-style: circle;
+  list-style: square;
   padding: 1;
 }
 
 ul li {
   background: white;
-  margin-bottom: 1.5rem;
-  padding: 1.75rem;
+  margin: 1.5rem;
+  padding: 1rem;
   border-radius: 3px;
-  border-left: 2px solid #28a745;
+  border-left: 2px solid #4e5986;
   box-shadow: 1 1px 3px rgba(0, 0, 0, 0.1);
   transition: transform 1.2s ease;
+  color: black;
 }
 
 ul li:hover {
@@ -133,6 +134,10 @@ ul li:last-child {
   margin-bottom: 1.5rem;
   font-family: "Courier New", monospace;
   font-size: 1.9rem;
+}
+
+.error-message p {
+  padding: 0;
 }
 
 /* Empty state styles */
